--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "node-telegram-bot-api": "^0.58.0"
   }
 }
