--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.3",
     "node-telegram-bot-api": "^0.58.0"
   }
 }
